# dashj-merk

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: clippy.yml  ktlint.yml  tests.yml
detekt/: ruleset.yml
src/main/java/io/github/rctcwyvrn/blake3/: Blake3.java
src/main/kotlin/org/dashj/merk/: ByteArrayKey.kt  Extensions.kt  Hash.kt  MerkVerifyProof.kt  RootMerkleTree.kt  RustGreetings.kt
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs
src/test/kotlin/org/dashj/merk/: MerkVerifyProofTest.kt  RootMerkleTreeTest.kt
