[package]
name = "dashj-merk"
version = "0.1.0"
authors = ["HashEngineering <hashengineeringsolutions@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merk = { git = "https://github.com/dashevo/merk", branch = "close-and-destroy" }
#merk = { git = "https://github.com/nomic-io/merk", branch = "develop" }
jni = { version = "0.5", default-features = false }
hex = { version = "0.3.0" }

[lib]
crate-type = ["dylib"]
